[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dategpt"
version = "0.1.0"
description = "Python library to help parser dates using OpenAI API"
readme = "README.rst"
authors = [
  {name = "Adriano Gil", email = "adrianogil.san@gmail.com"}
]
maintainers = [
  {name = "Adriano Gil", email = "adrianogil.san@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/adrianogil/dategpt/issues"
changelog = "https://github.com/adrianogil/dategpt/blob/master/changelog.md"
homepage = "https://github.com/adrianogil/dategpt"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.poetry.scripts]
dategpt = 'dategpt.cli:main'


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

